trying to fix break jump

--- a/svelte/src/styles/rich-text.css
+++ b/svelte/src/styles/rich-text.css
@@ -1,4 +1,6 @@
 .rich-text {
+  white-space: pre-line;
+
   & > * + * {
     margin-top: 1lh;
   }
@@ -41,6 +43,8 @@
 }
 
 .rich-text-breaks-only {
+  white-space: pre-line;
+
   & > * + * {
     margin-top: 1.3em;
   }
